[presentation] added a backup slide

--- a/presentation/content.tex
+++ b/presentation/content.tex
@@ -523,7 +523,7 @@
 \end{frame}
 
 
-\section{R\&D for hybrid pixel detectors at CLIC}
+\section{R\&D for planar pixel sensors at CLIC}
 \begin{frame}
   \frametitle{}
   \tableofcontents[currentsection]
@@ -538,7 +538,7 @@ height=4em]
 
 % ----------------------------- %
 \begin{frame}
-  \frametitle{R\&D for hybrid pixel detectors at CLIC}
+  \frametitle{R\&D for planar pixel sensors at CLIC}
 
 
   \begin{columns}
@@ -1874,8 +1874,8 @@ height=4em]
         \item Validation of \textsc{Geant4}-based simulations with
           data.
         \item Extrapolation of the simulations for smaller pixels: the
-          required resolution of $\sigma\sim3\,\micron$ requires
-          smaller pixels ($<15\,\micron$) or new charge sharing
+          required resolution of $\sigma\sim3\,\micron$ is achievable
+          with smaller pixels ($<15\,\micron$) or new charge sharing
           solutions.
         \end{itemize}
 
@@ -1899,6 +1899,35 @@ height=4em]
 
   \centering
   \Huge{Backup slides}
+
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%         SLIDE             %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+  \frametitle{Process-flow for active-edge sensors}
+  
+  \begin{columns}
+    \column{0.33\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{../figures/ActiveEdge/advacamProcess/wafer_1.pdf}\\
+    \includegraphics[width=\textwidth]{../figures/ActiveEdge/advacamProcess/wafer_2.pdf}\\
+    \includegraphics[width=\textwidth]{../figures/ActiveEdge/advacamProcess/wafer_3.pdf}
+
+    \column{0.33\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{../figures/ActiveEdge/advacamProcess/wafer_4.pdf}\\
+    \includegraphics[width=\textwidth]{../figures/ActiveEdge/advacamProcess/wafer_5.pdf}\\
+    \includegraphics[width=\textwidth]{../figures/ActiveEdge/advacamProcess/wafer_6.pdf}
+
+    \column{0.33\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{../figures/ActiveEdge/advacamProcess/wafer_7.pdf}\\
+    \includegraphics[width=\textwidth]{../figures/ActiveEdge/advacamProcess/wafer_8.pdf}\\
+    \includegraphics[width=\textwidth]{../figures/ActiveEdge/advacamProcess/wafer_9.pdf}
+
+  \end{columns}
 
 \end{frame}
 
